# dailystonks-terminal

./: README.md  daily-stonks-live-terminal-v0_2_0.patch
dailystonks-live-desktop-v0_1_1/: FILES_TO_KEEP_AND_DROP.md  README.md  SPLIT_FROM_FULL_REPO_WINDOWS.ps1  install_linux.sh  install_windows.ps1  petey-convo.txt  pyproject.toml  requirements.txt  run_linux.sh  run_windows.bat  run_windows.ps1
dailystonks-live-desktop-v0_1_1/dailystonks/: live_terminal.py
dailystonks-live-desktop-v0_1_1/dailystonks/data/: marketdata.py  sp500.py  universe_refresh.py
dailystonks-live-desktop-v0_1_1/scripts/: run_live_terminal.ps1  run_live_terminal.py  run_live_terminal.sh
