[project]
name = "dailystonks-live-desktop"
version = "0.1.1"
description = "Standalone local live terminal/browser market dashboard extracted from DailyStonks"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "scikit-learn",
  "statsmodels",
  "scipy",
  "yfinance",
  "pyyaml",
  "lxml",
]

[project.scripts]
dailystonks-report = "dailystonks.__main__:main"
dailystonks-live = "dailystonks.live_terminal:main"
stonks-live = "dailystonks.live_terminal:main"
dailystonks-refresh-universe = "dailystonks.data.universe_refresh:main"
stonks-refresh-universe = "dailystonks.data.universe_refresh:main"
